WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22530
Assertion failures seen on buildbot due to uninitialized WorkerThread::m_threadID
https://bugs.webkit.org/show_bug.cgi?id=22530
Summary
Assertion failures seen on buildbot due to uninitialized WorkerThread::m_thre...
Alexey Proskuryakov
Reported
2008-11-27 03:18:55 PST
There is a race condition when initializing WorkerThread::m_threadID, because it is stored after the thread is created. This causes assertion failures when checking current thread id. Same problem is present when initializing database threads.
Attachments
proposed fix
(5.57 KB, patch)
2008-11-27 03:40 PST
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-11-27 03:40:29 PST
Created
attachment 25558
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2008-11-30 00:32:02 PST
Committed revision 38850.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug