        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=22530
        Assertion failures seen on buildbot due to uninitialized WorkerThread::m_threadID

        * dom/WorkerThread.cpp:
        (WebCore::WorkerThread::start): Protect worker startup with a mutex to ensure that this
        function runs to completion before the thread begins execution.
        (WebCore::WorkerThread::workerThread): Updated comments.
        (WebCore::WorkerThread::stop): Ditto.
        * dom/WorkerThread.h: Renamed m_workerContextMutex to m_threadCreationMutex, because it now
        protects startup as a whole.

        * storage/DatabaseThread.cpp:
        * storage/DatabaseThread.h:
        * storage/LocalStorageThread.cpp:
        * storage/LocalStorageThread.h:
        Fixed the same m_threadID problem.



git-svn-id: svn://svn.chromium.org/blink/trunk@38850 bbb929c8-8fbe-4397-9dbb-9b2b20218538