third_party/WebKit/WebCore/dom/WorkerThread.cpp
@@ -60,6 +60,9 @@ WorkerThread::~WorkerThread()
 
 bool WorkerThread::start()
 {
+    // Mutex protection is necessary to ensure that m_threadID is initialized when the thread starts.
+    MutexLocker lock(m_threadCreationMutex);
+
     if (m_threadID)
         return true;
 
@@ -76,8 +79,7 @@ void* WorkerThread::workerThreadStart(void* thread)
 void* WorkerThread::workerThread()
 {
     {
-        // Mutex protection is necessary because stop() can be called before the context is fully created.
-        MutexLocker lock(m_workerContextMutex);
+        MutexLocker lock(m_threadCreationMutex);
         m_workerContext = WorkerContext::create(m_scriptURL, this);
     }
 
@@ -106,7 +108,9 @@ void* WorkerThread::workerThread()
 
 void WorkerThread::stop()
 {
-    MutexLocker lock(m_workerContextMutex);
+    // Mutex protection is necessary because stop() can be called before the context is fully created.
+    MutexLocker lock(m_threadCreationMutex);
+
     // Ensure that tasks are being handled by thread event loop. If script execution weren't forbidden, a while(1) loop in JS could keep the thread alive forever.
     if (m_workerContext)
         m_workerContext->script()->forbidExecution();
