third_party/WebKit/WebCore/dom/WorkerThread.h
@@ -66,7 +66,7 @@ namespace WebCore {
         WorkerMessagingProxy* m_messagingProxy;
 
         RefPtr<WorkerContext> m_workerContext;
-        Mutex m_workerContextMutex;
+        Mutex m_threadCreationMutex;
 
         MessageQueue<RefPtr<WorkerTask> > m_messageQueue;
     };
