third_party/WebKit/WebCore/storage/DatabaseThread.h
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <wtf/MessageQueue.h>
 #include <wtf/PassRefPtr.h>
 #include <wtf/RefPtr.h>
+#include <wtf/Threading.h>
 
 namespace WebCore {
 
@@ -62,6 +63,7 @@ private:
     static void* databaseThreadStart(void*);
     void* databaseThread();
 
+    Mutex m_threadCreationMutex;
     ThreadIdentifier m_threadID;
     RefPtr<DatabaseThread> m_selfRef;
 
