third_party/WebKit/WebCore/storage/LocalStorageThread.cpp
@@ -46,6 +46,8 @@ LocalStorageThread::LocalStorageThread()
 
 bool LocalStorageThread::start()
 {
+    MutexLocker lock(m_threadCreationMutex);
+
     if (m_threadID)
         return true;
 
@@ -61,6 +63,11 @@ void* LocalStorageThread::localStorageThreadStart(void* thread)
 
 void* LocalStorageThread::localStorageThread()
 {
+    {
+        // Wait for LocalStorageThread::start() to complete.
+        MutexLocker lock(m_threadCreationMutex);
+    }
+
     while (true) {
         RefPtr<LocalStorageTask> task;
         if (!m_queue.waitForMessage(task))
