third_party/WebKit/WebCore/storage/LocalStorageThread.h
@@ -60,6 +60,7 @@ namespace WebCore {
         static void* localStorageThreadStart(void*);
         void* localStorageThread();
 
+        Mutex m_threadCreationMutex;
         ThreadIdentifier m_threadID;
         RefPtr<LocalStorageThread> m_selfRef;
 
